# basic-rag-model-poc

./: .gitignore  .pylintrc  README.md  cli.py  import_site_as_text.py  pyproject.toml  query_model.py  setup.cfg
ariel_llm/: bs_transformer.py  chromadb_repo.py  embedding.py  fetch.py  query.py  splitters.py
