[tool.poetry]
name = "ariel-llm"
version = "0.1.0"
description = ""
authors = ["Adam Plante <toomanyadams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
ruff = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
