[tool.poetry]
name = "ariel-llm"
version = "0.1.0"
description = ""
authors = ["Adam Plante <toomanyadams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
ruff = "^0.6.0"
langchain-openai = "^0.1.21"
langchain = "^0.2.14"
playwright = "^1.46.0"
beautifulsoup4 = "^4.12.3"
langchain-community = "^0.2.12"
html2text = "^2024.2.26"
pytest = "^8.3.2"
chromadb = "^0.5.5"
langchain-ollama = "^0.1.1"
langchain-chroma = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
